@@ -4,6 +4,7 @@ export(createSubjectProfileReport)
 export(filterData)
 export(getGLPGColorPalettePatientProfile)
 export(getGLPGLinetypePalettePatientProfile)
+export(getGLPGShapePalettePatientProfile)
 export(getNLinesYGgplot)
 export(getPathTemplate)
 export(subjectProfileCombine)
