@@ -11,7 +11,7 @@
 #' @import ggplot2
 #' @importFrom plyr dlply
 #' @importFrom stats reorder
-#' @importFrom glpgUtilityFct getLabelVar getGLPGShapePalette
+#' @importFrom glpgUtilityFct getLabelVar
 #' @export
 subjectProfileEventPlot <- function(
 	data,
@@ -57,7 +57,7 @@ subjectProfileEventPlot <- function(
 	}else	colorPalette <- getGLPGColorPalettePatientProfile(n = 1)
 	if(!is.null(shapeVar)){
 		data[, shapeVar] <- convertAesVar(data, var = shapeVar)
-		if(is.null(shapePalette))	shapePalette <- getGLPGShapePalette(x = data[, shapeVar])
+		if(is.null(shapePalette))	shapePalette <- getGLPGShapePalettePatientProfile(x = data[, shapeVar])
 	}
 	
 	# format variable
