@@ -1,5 +1,7 @@
 0.2.0
     o save nLines at module plot creation instead of extracting them  when combining plots
+    o formatParamVar: fix warning when multiple 'paramGroupVar'
+    o getGLPGShapePalettePatientProfile
 0.1.0
     o example datasets moved to the glpgUtilityFct package
     o getGLPGColorPalettePatientProfile/getGLPGLinetypePalettePatientProfile
